--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>OffGrid Essentials</title>
+  <meta name="description" content="Explore OffGrid Essentials' blog for tips on off-grid living, solar power, water systems, and prepping.">
+  <title>Blog - OffGrid Essentials</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 font-sans">
@@ -18,32 +19,28 @@
     </div>
   </nav>
 
-  <!-- Hero Section -->
-  <header class="bg-green-600 text-white text-center py-16">
-    <div class="container mx-auto px-4">
-      <h1 class="text-4xl md:text-5xl font-bold mb-4">Live Off-Grid with Confidence</h1>
-      <p class="text-lg md:text-xl">Learn about solar power, water systems, prepping, and sustainable living.</p>
-    </div>
-  </header>
-
-  <!-- Featured Articles Section -->
+  <!-- Blog Index Section -->
   <section class="container mx-auto px-4 py-12">
-    <h2 class="text-3xl font-bold text-center mb-8">Featured Articles</h2>
-    <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-      <!-- Article 1 -->
-      <a href="post1.html" class="block bg-white rounded-lg shadow-md hover:shadow-lg transition p-6">
-        <h3 class="text-xl font-semibold text-green-800 mb-2">Setting Up Your Solar Power System</h3>
-        <p class="text-gray-600">Discover the essentials of installing and maintaining a solar power system for off-grid living.</p>
+    <h1 class="text-4xl font-bold text-green-800 text-center mb-8">OffGrid Essentials Blog</h1>
+    <p class="text-center text-gray-700 mb-12 max-w-2xl mx-auto">Discover expert tips and guides on off-grid living, solar power, water systems, and prepping for a sustainable lifestyle.</p>
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+      <!-- Blog Post 1 -->
+      <a href="best-composting-toilets-2025.html" class="block bg-white rounded-lg shadow-md hover:shadow-lg transition p-6">
+        <h2 class="text-xl font-semibold text-green-800 mb-2">Best Composting Toilets for Cabins and Vans (2025)</h2>
+        <p class="text-gray-600">Explore the top composting toilets for off-grid cabins and vans, with features and tips for choosing the right model.</p>
+        <p class="text-gray-500 text-sm mt-4">Published on July 28, 2025</p>
       </a>
-      <!-- Article 2 -->
+      <!-- Placeholder Blog Post 2 -->
       <a href="post2.html" class="block bg-white rounded-lg shadow-md hover:shadow-lg transition p-6">
-        <h3 class="text-xl font-semibold text-green-800 mb-2">Water Harvesting and Purification</h3>
-        <p class="text-gray-600">Learn how to collect and purify water to ensure a reliable supply in off-grid environments.</p>
+        <h2 class="text-xl font-semibold text-green-800 mb-2">Solar Power Setup Guide</h2>
+        <p class="text-gray-600">Learn how to set up a reliable solar power system for your off-grid home or van.</p>
+        <p class="text-gray-500 text-sm mt-4">Coming Soon</p>
       </a>
-      <!-- Article 3 -->
+      <!-- Placeholder Blog Post 3 -->
       <a href="post3.html" class="block bg-white rounded-lg shadow-md hover:shadow-lg transition p-6">
-        <h3 class="text-xl font-semibold text-green-800 mb-2">Prepping 101: Building Your Emergency Kit</h3>
-        <p class="text-gray-600">Get started with prepping by creating a comprehensive emergency kit for any situation.</p>
+        <h2 class="text-xl font-semibold text-green-800 mb-2">Water Harvesting Techniques</h2>
+        <p class="text-gray-600">Discover effective methods for collecting and purifying water in off-grid environments.</p>
+        <p class="text-gray-500 text-sm mt-4">Coming Soon</p>
       </a>
     </div>
   </section>
