--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>OffGrid Essentials</title>
+  <meta name="description" content="Learn off-grid living with OffGrid Essentials' guides on solar power, water systems, prepping, and essential tools for 2025.">
+  <title>OffGrid Essentials - Your Guide to Off-Grid Living in 2025</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 font-sans">
@@ -21,36 +22,56 @@
   <!-- Hero Section -->
   <header class="bg-green-600 text-white text-center py-16">
     <div class="container mx-auto px-4">
-      <h1 class="text-4xl md:text-5xl font-bold mb-4">Live Off-Grid with Confidence</h1>
-      <p class="text-lg md:text-xl">Learn about solar power, water systems, prepping, and sustainable living.</p>
+      <h1 class="text-4xl md:text-5xl font-bold mb-4">Live Off-Grid with Confidence in 2025</h1>
+      <p class="text-lg md:text-xl">Discover expert guides on solar power, water systems, prepping, and sustainable living with OffGrid Essentials.</p>
+      <img src="images/off-grid-blog.jpg" alt="Off-grid living essentials for 2025" class="w-full h-auto rounded-lg mt-6" loading="lazy">
     </div>
   </header>
 
   <!-- Featured Articles Section -->
   <section class="container mx-auto px-4 py-12">
-    <h2 class="text-3xl font-bold text-center mb-8">Featured Articles</h2>
+    <h2 class="text-3xl font-bold text-center mb-8">Featured Articles on Off-Grid Living</h2>
     <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
       <!-- Article 1 -->
       <a href="blog/post1.html" class="block bg-white rounded-lg shadow-md hover:shadow-lg transition p-6">
-        <h3 class="text-xl font-semibold text-green-800 mb-2">Best Composting Toilets for Cabins and Vans (2025)</h3>
-        <p class="text-gray-600">Explore the top composting toilets for off-grid cabins and vans, with features and tips for choosing the right model.</p>
+        <h3 class="text-xl font-semibold text-green-800 mb-2">Best Composting Toilets for Off-Grid Cabins and Vans</h3>
+        <p class="text-gray-600">Explore top composting toilets for off-grid living, with features and tips for choosing the right model.</p>
       </a>
       <!-- Article 2 -->
       <a href="blog/post2.html" class="block bg-white rounded-lg shadow-md hover:shadow-lg transition p-6">
-        <h3 class="text-xl font-semibold text-green-800 mb-2">Setting Up Your Solar Power System</h3>
-        <p class="text-gray-600">Discover the essentials of installing and maintaining a solar power system for off-grid living.</p>
+        <h3 class="text-xl font-semibold text-green-800 mb-2">How to Set Up Solar Power for Your Tiny Home</h3>
+        <p class="text-gray-600">Learn the essentials of installing a solar power system for off-grid homes or vans.</p>
       </a>
       <!-- Article 3 -->
       <a href="blog/post3.html" class="block bg-white rounded-lg shadow-md hover:shadow-lg transition p-6">
-        <h3 class="text-xl font-semibold text-green-800 mb-2">Water Harvesting and Purification</h3>
-        <p class="text-gray-600">Learn how to collect and purify water to ensure a reliable supply in off-grid environments.</p>
+        <h3 class="text-xl font-semibold text-green-800 mb-2">10 Essential Off-Grid Tools for Beginners</h3>
+        <p class="text-gray-600">Discover must-have tools for starting your off-grid journey, from water filters to solar chargers.</p>
       </a>
     </div>
   </section>
 
+  <!-- Schema Markup -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "OffGrid Essentials - Your Guide to Off-Grid Living in 2025",
+    "description": "Learn off-grid living with OffGrid Essentials' guides on solar power, water systems, prepping, and essential tools for 2025.",
+    "publisher": {
+      "@type": "Organization",
+      "name": "OffGrid Essentials",
+      "logo": {
+        "@type": "ImageObject",
+        "url": "https://yourdomain.com/images/logo.png"
+      }
+    }
+  }
+  </script>
+
   <!-- Footer -->
   <footer class="bg-green-800 text-white text-center py-4">
     <p>&copy; 2025 OffGrid Essentials. All rights reserved.</p>
+    <p class="text-sm">As an Amazon Associate, we earn from qualifying purchases.</p>
   </footer>
 </body>
 </html>
